enum EBaseGameEvents {
	GE_VDebugGameSessionIDEvent = 200;
	GE_PlaceDecalEvent = 201;
	GE_ClearWorldDecalsEvent = 202;
	GE_ClearEntityDecalsEvent = 203;
	GE_ClearDecalsForSkeletonInstanceEvent = 204;
	GE_Source1LegacyGameEventList = 205;
	GE_Source1LegacyListenEvents = 206;
	GE_Source1LegacyGameEvent = 207;
	GE_SosStartSoundEvent = 208;
	GE_SosStopSoundEvent = 209;
	GE_SosSetSoundEventParams = 210;
	GE_SosSetLibraryStackFields = 211;
	GE_SosStopSoundEventHash = 212;
}

message CMsgSource1LegacyGameEventList {
	message key_t {
		optional int32 type = 1;
		optional string name = 2;
	}

	message descriptor_t {
		optional int32 eventid = 1;
		optional string name = 2;
		repeated .CMsgSource1LegacyGameEventList.key_t keys = 3;
	}

	repeated .CMsgSource1LegacyGameEventList.descriptor_t descriptors = 1;
}

message CMsgSource1LegacyGameEvent {
	message key_t {
		optional int32 type = 1;
		optional string val_string = 2;
		optional float val_float = 3;
		optional int32 val_long = 4;
		optional int32 val_short = 5;
		optional int32 val_byte = 6;
		optional bool val_bool = 7;
		optional uint64 val_uint64 = 8;
	}

	optional string event_name = 1;
	optional int32 eventid = 2;
	repeated .CMsgSource1LegacyGameEvent.key_t keys = 3;
	optional int32 server_tick = 4;
	optional int32 passthrough = 5;
}
